test/lambda/negative/runtime/test_div_zero.ls
// Test division by zero runtime error
let x = 10;
let y = 0;
x / y
